--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,7 @@ markdown==2.6.5
 django-crispy-forms==1.6.0
 django-filter==0.12.0
 django-guardian==1.4.1
+gunicorn==19.4.5
+dj-database-url==0.4.0
+psycopg2==2.6.1
+whitenoise==2.0.6
