--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Waste Master",
+  "name": "waste_master",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -18,6 +18,12 @@
   },
   "homepage": "https://github.com/oleaha/waste_master#readme",
   "dependencies": {
-    "bower": "^1.7.7"
+    "bower": "^1.7.7",
+    "grunt": "^0.4.5",
+    "grunt-cli": "^0.1.13",
+    "grunt-contrib-concat": "^0.5.1",
+    "grunt-contrib-uglify": "^0.9.2",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-sass": "^1.0.0"
   }
 }
