--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "Waste Master",
+  "name": "waste_master",
   "homepage": "https://github.com/oleaha/waste_master",
   "authors": [
     "Ole Andreas Hansen <oleaha@me.com>"
